# norwegian-laws

./: .gitignore  CITATION.cff  LICENSE  MIGRATION.md  README.md  SUBSCRIBE.md  TODO.md  _quarto.yml  aktivitet.html  feed.xml  index.html  index.qmd  laws.json  pyproject.toml  robots.txt
assets/: head-meta.html
book/: abonner.html  abonner.qmd  about.html  about.qmd  dept-arbeids--og-inkluderingsdepartementet.html  dept-arbeids--og-inkluderingsdepartementet.qmd  dept-barne--og-familiedepartementet.html  dept-barne--og-familiedepartementet.qmd  dept-digitaliserings--og-forvaltningsdepartementet.html  dept-digitaliserings--og-forvaltningsdepartementet.qmd  dept-energidepartementet.html  dept-energidepartementet.qmd  dept-finansdepartementet.html  dept-finansdepartementet.qmd  dept-forsvarsdepartementet.html  dept-forsvarsdepartementet.qmd  dept-kunnskapsdepartementet.html  (+155 more)
lovdata-loader/: pyproject.toml
lovdata-loader/src/lovdata_loader/: __init__.py  cli.py  download.py  models.py  parser.py  reconstruct.py  store.py
lovdata-loader/tests/: test_parser.py  test_preamble_forskrifter.py
lovdata-loader/tests/fixtures/: fixture_grunnloven.xml  fixture_norske_lov.xml  fixture_regnskapsloven.xml
lovdata-publisher/: pyproject.toml
lovdata-publisher/src/lovdata_publisher/: __init__.py  cli.py  feed.py  feeds.py  formatter.py  git_export.py  historie.py  historie_pages.py  manifests.py  paragraph_history.py  per_law_pages.py  quarto.py  readme_updater.py  releases.py  search_index.py  sitemap.py  stats_page.py
lovdata-publisher/tests/: test_feed.py  test_feeds.py  test_formatter.py  test_forskrifter_routing.py  test_historie_pages.py  test_laws_json.py  test_manifests.py  test_paragraph_history.py  test_per_law_pages.py  test_readme_updater.py  test_sitemap.py  test_stats_page.py  test_topic_split.py
(+37631 files in other folders)
