[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovdata-pipeline"
version = "0.1.0"
description = "Parse Lovdata public XML archives into a git repository with backdated commits"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.scripts]
lovdata-pipeline = "lovdata_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lovdata_pipeline"]
